# Gtsam_test_example

FixedLagSmoother/: 4_8_24_kri_nuance 1.yaml  5_1_easy_initials.txt  CMakeLists.txt  IMU_traj.txt  KRI2_4_8_24_traj.txt  LM_time.txt  build.sh  combined_kri_Lmk.txt  combined_kri_initials.txt  countLmkTimes.py  frontendData_VO_count.txt  kri2_Lmk.txt  kri2_initials.txt  newLogs_initials.txt  note.md  old_graph_logs_indoor.txt  resample_VO_data.py  testData.py
FixedLagSmoother/debug/: matrix.txt
FixedLagSmoother/python/: average_bias.py  combined_kri_imu.txt  merge.py  mergeImu.py  processDataVO.py  processImu.py  processInitials.py  readImu.py
FixedLagSmoother/src/: BatchTest.cpp  CombinedImuFactorsExample.cpp  FLSVIO_new_backup_1.cpp  FLSVIO_new_backup_2.cpp  FLSVIO_new_backup_3.cpp  FLSVIO_new_backup_4.cpp  FLSVIO_new_backup_5.cpp  FLSVIO_new_backup_6.cpp  FLSVIO_new_backup_7.cpp  FLSVIO_new_batch_test.cpp  FLSVIO_new_test_LM.cpp  FixedLagSmootherExampleVIO_new_isam_4.cpp
